Fix resume link, update dates, add company logos, fix location to Lahore Pakistan

--- a/public/resume.html
+++ b/public/resume.html
@@ -271,7 +271,7 @@
             <div>
               <span class="exp-title">QA Engineer</span> | <span class="exp-company">Texinnova</span>
             </div>
-            <div class="exp-date">Jan 2025 - Present</div>
+            <div class="exp-date">August 2025 - Present</div>
           </div>
           <div class="exp-location">Remote | Full-time</div>
           <ul class="achievements">
@@ -289,7 +289,7 @@
             <div>
               <span class="exp-title">R&D Associate</span> | <span class="exp-company">Burlytex Pvt Ltd</span>
             </div>
-            <div class="exp-date">2023 - 2024</div>
+            <div class="exp-date">July 2025 - July 2025</div>
           </div>
           <div class="exp-location">Lahore, Pakistan | Full-time</div>
           <ul class="achievements">
@@ -303,11 +303,11 @@
         <div class="experience-item">
           <div class="exp-header">
             <div>
-              <span class="exp-title">R&D Intern</span> | <span class="exp-company">Top Notch Rubber & Metals</span>
+              <span class="exp-title">RR&D InternD Associate</span> | <span class="exp-company">Top Notch Rubber & Metals</span>
             </div>
-            <div class="exp-date">2022 - 2023</div>
+            <div class="exp-date">May 2025 - June 2025</div>
           </div>
-          <div class="exp-location">Lahore, Pakistan | Internship</div>
+          <div class="exp-location">Lahore, Pakistan | Full-time</div>
           <ul class="achievements">
             <li>Material testing and quality assurance for rubber/metal products</li>
             <li>Lab equipment operation and technical documentation</li>
@@ -325,9 +325,9 @@
             <div>
               <span class="exp-title">Master of Science (MS) in Chemistry</span>
             </div>
-            <div class="exp-date">2021 - 2023</div>
+            <div class="exp-date">2024 - 2026</div>
           </div>
-          <div class="exp-location">University of the Punjab, Lahore, Pakistan</div>
+          <div class="exp-location">University of the Education, Lahore, Pakistan</div>
           <p class="exp-description">Research focus on analytical chemistry. Developed analytical thinking and research methodology skills applied to QA.</p>
         </div>
 
@@ -336,9 +336,9 @@
             <div>
               <span class="exp-title">Bachelor of Science (BS) in Chemistry</span>
             </div>
-            <div class="exp-date">2017 - 2021</div>
+            <div class="exp-date">2019 - 2023</div>
           </div>
-          <div class="exp-location">University of the Punjab, Lahore, Pakistan</div>
+          <div class="exp-location">University of the Education, Lahore, Pakistan</div>
           <p class="exp-description">Foundation in scientific methodology, data analysis, and systematic problem-solving.</p>
         </div>
       </div>
