Fix BS education to University of the Punjab

--- a/public/resume.html
+++ b/public/resume.html
@@ -338,7 +338,7 @@
             </div>
             <div class="exp-date">2019 - 2023</div>
           </div>
-          <div class="exp-location">University of the Education, Lahore, Pakistan</div>
+          <div class="exp-location">University of the Punjab, Lahore, Pakistan</div>
           <p class="exp-description">Foundation in scientific methodology, data analysis, and systematic problem-solving.</p>
         </div>
       </div>
